# fully-cacheable

./: .dockerignore  Cargo.toml  Dockerfile  README.md  cats.db  fly.toml  litefs.yml
src/: main.rs
